# mano-aloe

./: .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: test.yml
backend/: Dockerfile  entrypoint.sh
backend-next/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  sqlx-data.json
backend-next/migrations/: 0000-initial.sql  migrate_data.py
backend-next/src/: main.rs
backend-next/src/routes/: context.rs  gallery.rs  games.rs  message.rs  mod.rs
frontend/: Dockerfile  babel.config.js  esbuild-script.js  jest.config.ts  mano-aloe.conf.template  package.json
frontend-next/: .gitignore  README.md  dev.Dockerfile  index.html  package-lock.json  package.json
frontend-next/src/: App.tsx  bindings.ts  config.tsx  credits.tsx  rspc.tsx  theme.tsx
frontend-next/src/assets/cards/: index.tsx
frontend-next/src/components/BaseCard/: index.tsx
frontend-next/src/components/ErrorPage/: index.tsx
frontend-next/src/components/GalleryPage/: index.tsx
frontend-next/src/components/GamesPage/: index.tsx
frontend-next/src/components/Header/: index.tsx
frontend-next/src/components/HomePage/: index.tsx
frontend-next/src/contexts/: LanguageContext.tsx
frontend-next/src/services/: ApiService.tsx
frontend-next/src/theme/: colors.tsx  index.tsx  styles.tsx
frontend-next/src/theme/components/: Accordion.tsx  Button.tsx  Icon.tsx  Skeleton.tsx  Text.tsx
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/models/: anchor.ts  url.ts
frontend/src/tests/: README.md  altnav.test.js
(+50 files in other folders)
