[package]
name = "backend-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
dotenv = "0.15.0"
rspc = { version="0.1.2", features=["axum", "uuid"] }
serde = { version="1.0.152", features=["derive"] }
sqlx = { version="0.6.2", features=["runtime-tokio-native-tls", "postgres", "uuid", "offline"] }
tokio = { version="1.25.0", features=["full"] }
tower-http = { version="0.3.5", features=["cors"] }
uuid = { version="1.3.0", features=["serde"] }
